--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -265,9 +265,9 @@
     <string name="config_mms_user_agent_profile_url" translatable="false">http://uaprof.motorola.com/phoneconfig/nexus6/Profile/nexus6.rdf</string>
 
     <!--  Maximum number of supported users -->
-    <integer name="config_multiuserMaximumUsers">4</integer>
+    <integer name="config_multiuserMaximumUsers">1</integer>
     <!--  Whether Multiuser UI should be shown -->
-    <bool name="config_enableMultiUserUI">true</bool>
+    <bool name="config_enableMultiUserUI">false</bool>
 
     <!-- Dream of notifications -->
     <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
@@ -339,4 +339,51 @@
     <string-array name="config_cell_retries_per_error_code">
         <item>36,3</item> <!-- REGULAR_DEACTIVATION, 3 retries -->
     </string-array>
+
+    <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
+    <bool name="config_intrusiveNotificationLed">true</bool>
+
+    <!-- Default color for notification LED is blue. -->
+    <color name="config_defaultNotificationColor">#FF0000FF</color>
+
+    <!-- Default value for led color when battery is medium charged -->
+    <integer name="config_notificationsBatteryMediumARGB">0xFFFFFF00</integer>
+
+    <!-- Declare wireless charging support -->
+    <bool name="config_supportsWirelessCharging">true</bool>
+
+    <!-- Allow all rotations (includes reverse portrait) -->
+    <bool name="config_allowAllRotations">true</bool>
+
+    <!-- Whether WiFi display is supported by this device.
+         There are many prerequisites for this feature to work correctly.
+         Here are a few of them:
+         * The WiFi radio must support WiFi P2P.
+         * The WiFi radio must support concurrent connections to the WiFi display and
+           to an access point.
+         * The Audio Flinger audio_policy.conf file must specify a rule for the "r_submix"
+           remote submix module.  This module is used to record and stream system
+           audio output to the WiFi display encoder in the media server.
+         * The remote submix module "audio.r_submix.default" must be installed on the device.
+         * The device must be provisioned with HDCP keys (for protected content).
+    -->
+    <bool name="config_enableWifiDisplay">true</bool>
+
+    <!-- enable doze powersaving mode -->
+    <bool name="config_enableAutoPowerModes">true</bool>
+
+    <!-- set proper wifi power ratios -->
+    <integer name="config_wifi_idle_receive_cur_ma">1</integer>
+    <integer name="config_wifi_active_rx_cur_ma">100</integer>
+    <integer name="config_wifi_tx_cur_ma">250</integer>
+    <integer name="config_wifi_operating_voltage_mv">3800</integer>
+
+    <!-- set proper bluetooth power ratios -->
+    <integer name="config_bluetooth_idle_cur_ma">5</integer>
+    <integer name="config_bluetooth_rx_cur_ma">17</integer>
+    <integer name="config_bluetooth_tx_cur_ma">46</integer>
+    <integer name="config_bluetooth_operating_voltage_mv">3500</integer>
+
+    <!-- Enable double tap to wake setting -->
+    <bool name="config_supportDoubleTapWake">true</bool>
 </resources>
